--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-"Hello World" 
+<!Doctype HTML>
+<html>
+	<head>
+		<title>Index</title>
+	</head>
+	<body>
+		<p>Hello world!</p>
+	</body>
+</html>
