--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 	</head>
 	<body>
 		<p>Hello world!</p>
+		<!-- git add --all -->
+		<!-- git commit -m "comment" -->
+		<!-- git push -u origin master -->
 	</body>
 </html>
