--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
-<!Doctype HTML>
+﻿<!DOCTYPE html>
 <html>
-	<head>
-		<title>Index</title>
-	</head>
-	<body>
-		<p>Hello world!</p>
-		<!-- git add --all -->
-		<!-- git commit -m "comment" -->
-		<!-- git push -u origin master -->
-	</body>
+    <head>
+	    <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>threadly</title>
+
+        <link href="Content/css/normalize.css" rel="stylesheet" />
+        <link href="Content/css/Bootstrap/bootstrap.css" rel="stylesheet" />
+        <link href="Content/css/Bootstrap/bootstrap-theme.css" rel="stylesheet" />
+        <link href="Content/css/site.css" rel="stylesheet" />
+    </head>
+    <body>
+        <header class="header">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-12">
+                        <h1>threadly</h1>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <div class="main">
+            <div class="container">
+                <div class="row">
+                    <form class="ffrom">
+                        <div class="col-xs-12 col-md-10 col-lg-10">
+                            <input type="text" id="comment" name="comment" autocomplete="off" placeholder="share your thoughts"/>
+                        </div>
+                        <div class="col-xs-12 col-md-2 col-lg-2">
+                            <button type="submit" class="btn">Post</button>
+                        </div>
+                    </form>
+                </div>
+
+                <ul class="comments" id="comments">
+                    <li>Foot Holder</li>
+                </ul>
+            </div>
+        </div>
+
+        <script src="Scripts/jQuery.js"></script>
+        <script src="Scripts/bootstrap.js"></script>
+        <script src="Scripts/general.js"></script>
+    </body>
 </html>
